Bug fix: footer overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,9 @@ footer {
     color: var(--colorTextSecondary);
     background-color: var(--colorPrimary);
     text-align: center;
+    @media (min-width: 450px) {
+        width: 80vw;
+    }
 }
 
 form {
